--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>My GitHub Page</title>
+  <title>Robert Cordray</title>
   <link rel="stylesheet" href="style.css"/>
  </head>
    
  <body>
-  <p>Make some changes</p>
+  <h1><u>Summary</u></h1>
+  <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
  </body>
 </html>
