--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
    
  <body>
   <h1><u>Summary</u></h1>
-  <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
+  <p>Bright, resourceful, and ambitious customer service specialist offering successful sales 
+   and management experience in the hospitality industry.  Take-charge leadership style that 
+   effectively motivates staff to achieve desired results in fast-paced environments.  Expert
+   in management, inventory control, training, teaming. Responsible, dependable, with a strong 
+   work ethic and a proven commitment to exceeding expectations.</p>
  </body>
 </html>
