--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
    effectively motivates staff to achieve desired results in fast-paced environments.  Expert
    in management, inventory control, training, teaming. Responsible, dependable, with a strong 
    work ethic and a proven commitment to exceeding expectations.</p>
+  <h1><u>Experience</u></h1>
+  <p>
+   <ul>
+    <li>MetroTransit</li>
+  </ul>
+  <h2><b>Transit Information Representative<b></h2>
+   </p>
  </body>
 </html>
