--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h1><u>Experience</u></h1>
   <p>
   <ul>
-    <li>MetroTransit</li>
+   <li><h2>MetroTransit</h2></li>
   </ul>
-  <h2><b>Transit Information Representative</b></h2>
+  <h3><b>Transit Information Representative</b></h3>
    
  </body>
 </html>
