--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <h1><u>Experience</u></h1>
   <p>
   <ul>
-   <li><h2>MetroTransit</h2></li>
+   <li><h2>MetroTransit  (2013-2016)</h2></li>
   </ul>
   <h3><b>Transit Information Representative</b></h3>
+  <br/>
+  <h4>Job duties included giving information to callers and assisting callers with any of their transit needs.</h4>
    
  </body>
 </html>
