--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <ul>
    <li><h2>MetroTransit  (2013-2016)</h2></li>
   </ul>
-  <h3><b>Transit Information Representative</b></h3>
+  <h3>Transit Information Representative</h3>
   <br/>
-  <h4>Job duties included giving information to callers and assisting callers with any of their transit needs.</h4>
+  <h4>Job duties included giving transit information to callers and assisting callers with any of their transit needs.</h4>
    
  </body>
 </html>
