--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
    <li><h2>MetroTransit  (2013-2016)</h2></li>
   </ul>
   <h3>Transit Information Representative</h3>
-  <br/>
   <h4>Job duties included giving transit information to callers and assisting callers with any of their transit needs.</h4>
    
+  <p>
+  <ul>
+   <li><h2>The Imperial Room  (2009-2014)</h2></li>
+  </ul>
+  <h3>Bartender/Security Manager</h3>
+  <h4>Managed a team of 10 employees. Instituted a system of accountability which helped coworkers resolve conflicts and work together more efficiently. No serious incidents during tenure.</h4>
  </body>
 </html>
