--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>Robert Cordray</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link href="style.css" type="text/css" rel="stylesheet">
  </head>
    
  <body>
