--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
  </head>
    
  <body>
-  <p><h1>Hi! I'm Bobby!</h1>
-  <a href="https://www.facebook.com/rcordray" target="_blank"> <img src="https://scontent.xx.fbcdn.net/v/t1.0-9/11702896_10153593622399050_2762491778545875667_n.jpg?oh=c785fb99bbcc30eef85452ff685c73ed&oe=5984D31F" alt="Robert Cordray"> </a>
+  <p><h1><a href="https://www.facebook.com/rcordray" target="_blank">Hi! I'm Bobby</a></h1>
  
   <h1><u>Summary</u></h1>
   <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
