--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Robert Cordray</title>
+  <title>¯\_(ツ)_/¯</title>
   <link href="style.css" type="text/css" rel="stylesheet">
  </head>
    
