--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
   <p><h1><a href="https://www.facebook.com/rcordray" target="_blank">Hi! I'm Bobby</a></h1>
  
-  <h1><u>Summary</u></h1>
+  <h1><u>Where I've Worked</u></h1>
   <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
   <h1><u>Experience</u></h1>
   <p>
