--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
  </head>
    
  <body>
-  <p><h1><a href="https://www.facebook.com/rcordray" target="_blank">Hi! I'm Bobby</a></h1>
+  <p><h1>Hi! I'm Bobby</h1>
+  
+  <a href="https://www.facebook.com/rcordray" target="_blank"><img src="http://imgur.com/a/a5B0L" alt="Robert Cordray"/></a>
  
   <h1><u>What I Do</u></h1>
   <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
