--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
   <p><h1>Hi! I'm Bobby</h1>
   
-  <p><a href="https://www.facebook.com/rcordray" target="_blank"><img src="http://imgur.com/1RW6Ucn" alt="Robert Cordray"/></a>
+  <p><a href="https://www.facebook.com/rcordray" target="_blank"><img src="https://ibb.co/cR7BBQ" alt="Robert Cordray"/></a>
   </p>
  
   <h1><u>What I Do</u></h1>
