--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
  <body>
   <p><h1>Hi! I'm Bobby</h1>
   
-  <p><a href="https://www.facebook.com/rcordray" target="_blank"><img src="https://ibb.co/cR7BBQ" alt="Robert Cordray"/></a>
-  </p>
+  <img src="https://ibb.co/cR7BBQ" alt="Robert Cordray"/>
  
   <h1><u>What I Do</u></h1>
   <p>Bright, resourceful, and ambitious customer service specialist offering successful sales and management experience in the hospitality industry.  Take-charge leadership style that effectively motivates staff to achieve desired results in fast-paced environments.  Expert in management, inventory control, training, teaming. Responsible, dependable, with a strong work ethic and a proven commitment to exceeding expectations.</p>
