--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
   </ul>
   <h3>Bartender/Security Manager</h3>
   <h4>Managed a team of 10 employees. Instituted a system of accountability which helped coworkers resolve conflicts and work together more efficiently. No serious incidents during tenure.</h4>
+  
+  <h4> I'm extremely excited to learn from Prime Digital Academy, if afforded that opportunity. My intentions are to be the hardest working student that I can be. I want to join a new industry and am willing to focus all of my time and energy into making this opportunity a reality. I hope to be given the chance to work with Prime Digital Academy. </h4>
  </body>
 </html>
